--- a/virus-base/po/ro/untangle-base-virus.po
+++ b/virus-base/po/ro/untangle-base-virus.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-07 17:03+0200\n"
+"POT-Creation-Date: 2008-11-10 11:22-0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -265,7 +265,7 @@ msgid "POP/IMAP Events"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:223
-msgid "Scan Message"
+msgid "Documents scanned"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:223
@@ -273,7 +273,7 @@ msgid "SCAN"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:224
-msgid "Block Message"
+msgid "Documents blocked"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:224
@@ -281,7 +281,7 @@ msgid "BLOCK"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:225
-msgid "Pass Message"
+msgid "Documents passed"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:225
@@ -289,7 +289,7 @@ msgid "PASS"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:226
-msgid "Remove Message"
+msgid "Infections removed"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:226
@@ -297,7 +297,7 @@ msgid "REMOVE"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:227
-msgid "Passed Infected Message"
+msgid "Passed by policy"
 msgstr ""
 
 #: ../impl/com/untangle/node/virus/VirusSmtpFilter.java:33
