--- a/virus-base/po/es/untangle-base-virus.po
+++ b/virus-base/po/es/untangle-base-virus.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:16-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-22 07:21-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -227,11 +227,11 @@ msgstr "Espere"
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:66
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:73
 msgid "Feature is not installed."
-msgstr ""
+msgstr "La función no está instalada."
 
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:83
 msgid "This request has expired."
-msgstr ""
+msgstr "Esta solicitud ha vencido."
 
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:112
 #, java-format
@@ -307,7 +307,7 @@ msgstr "ELIMINAR"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:226
 msgid "Passed by policy"
-msgstr "Pasado por póliza"
+msgstr "Pasado por directiva"
 
 #: ../impl/com/untangle/node/virus/VirusSmtpFilter.java:33
 msgid "SMTP Events"
