--- a/virus-base/po/pt_BR/untangle-base-virus.po
+++ b/virus-base/po/pt_BR/untangle-base-virus.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:38-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-23 23:40-0800\n"
+"Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -149,7 +149,7 @@ msgstr "Ação"
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-virus/settings.js:583
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-virus/settings.js:592
 msgid "pass message"
-msgstr "passar mensagem"
+msgstr "permitir mensagem"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-virus/settings.js:482
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-virus/settings.js:506
@@ -227,11 +227,11 @@ msgstr "Aguarde"
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:66
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:73
 msgid "Feature is not installed."
-msgstr ""
+msgstr "O recurso não está instalado."
 
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:83
 msgid "This request has expired."
-msgstr ""
+msgstr "Esta solicitação expirou."
 
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:112
 #, java-format
