--- a/virus-base/po/zh/untangle-base-virus.po
+++ b/virus-base/po/zh/untangle-base-virus.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 17:11-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-27 23:55-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -229,11 +229,11 @@ msgstr "请等候"
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:66
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:73
 msgid "Feature is not installed."
-msgstr ""
+msgstr "功能尚未安装。"
 
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:83
 msgid "This request has expired."
-msgstr ""
+msgstr "该请求已过期。"
 
 #: ../servlets/virus/src/com/untangle/node/virus/BlockPageServlet.java:112
 #, java-format
@@ -257,63 +257,63 @@ msgstr "如果您有任何问题，请联系{0}。"
 
 #: ../impl/com/untangle/node/virus/VirusAllFilter.java:33
 msgid "All Events"
-msgstr ""
+msgstr "所有事件"
 
 #: ../impl/com/untangle/node/virus/VirusHttpFilter.java:33
 msgid "HTTP Events"
-msgstr ""
+msgstr "HTTP事件"
 
 #: ../impl/com/untangle/node/virus/VirusInfectedFilter.java:33
 msgid "Infected Events"
-msgstr ""
+msgstr "被感染的事件"
 
 #: ../impl/com/untangle/node/virus/VirusLogFilter.java:33
 msgid "FTP Events"
-msgstr ""
+msgstr "FTP事件"
 
 #: ../impl/com/untangle/node/virus/VirusMailFilter.java:33
 msgid "POP/IMAP Events"
-msgstr ""
+msgstr "POP/IMAP事件"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:222
 msgid "Documents scanned"
-msgstr ""
+msgstr "已扫描文档"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:222
 msgid "SCAN"
-msgstr ""
+msgstr "扫描"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:223
 msgid "Documents blocked"
-msgstr ""
+msgstr "已阻止文档"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:223
 msgid "BLOCK"
-msgstr ""
+msgstr "阻止"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:224
 msgid "Documents passed"
-msgstr ""
+msgstr "已通过文档"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:224
 msgid "PASS"
-msgstr ""
+msgstr "通过"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:225
 msgid "Infections removed"
-msgstr ""
+msgstr "已移除感染"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:225
 msgid "REMOVE"
-msgstr ""
+msgstr "移除"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:226
 msgid "Passed by policy"
-msgstr ""
+msgstr "由策略通过"
 
 #: ../impl/com/untangle/node/virus/VirusSmtpFilter.java:33
 msgid "SMTP Events"
-msgstr ""
+msgstr "SMTP事件"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:48
 msgid "Host:"
