--- a/virus-base/po/es/untangle-base-virus.po
+++ b/virus-base/po/es/untangle-base-virus.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-24 15:45-0700\n"
+"PO-Revision-Date: 2008-11-25 06:07-0700\n"
 "Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
@@ -299,7 +299,7 @@ msgstr "PERMITIR"
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:225
 msgid "Infections removed"
-msgstr "Infecciones eliminadas"
+msgstr "Infecciones elimin."
 
 #: ../impl/com/untangle/node/virus/VirusNodeImpl.java:225
 msgid "REMOVE"
